# lab08

./: .gitignore  CMakeLists.txt  ChangeLog.md  DESCRIPTION  Dockerfile  README.md  test.cpp
.github/workflows/: build.yml  ci.yml  main.yml  main1.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  TestRunning-0.1.0-Linux.deb  TestRunning-0.1.0.0-Linux.rpm  cmake_install.cmake  install_manifest.txt
_build/_CPack_Packages/Linux/DEB/TestRunning-0.1.0-Linux/: control  md5sums
_build/_CPack_Packages/Linux/RPM/: rpmbuildtestrunning-devel.err  rpmbuildtestrunning-devel.out
_build/_CPack_Packages/Linux/RPM/RPMS/: TestRunning-0.1.0-Linux.rpm
_build/_CPack_Packages/Linux/RPM/SPECS/: testrunning-devel.spec
_build/banking/: Makefile  cmake_install.cmake
_build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
banking/: CMakeLists.txt
